:notes: speaker name calendar align fix
names were too long and too many rooms to fit them

--- a/_sass/partials/_schedule.scss
+++ b/_sass/partials/_schedule.scss
@@ -30,13 +30,15 @@ $small-label-width: 80px;
     .speaker-name {
         line-height: $speaker-image-size - 22;
         margin-left: $speaker-image-size + 8;
+        font-size: 12px; // firefox alignment fix | names were wider than rooms
     }
     .speaker-position {
         color: #555;
         display: block;
         line-height: 1;
         font-size: 12px;
-        // margin-top: -5px;
+        font-style: italic;
+        margin-top: 5px;
     }
 }
 .schedule-table {
@@ -113,7 +115,7 @@ $small-label-width: 80px;
     }
 }
 .slot-title {
-    font-size: 22px;
+    font-size: 16px;
     font-weight: $regular;
     margin: 0;
     padding-right: 20px;
@@ -123,6 +125,7 @@ $small-label-width: 80px;
 }
 .track-header-title {
     @extend .slot-title;
+    font-size: 18px;
 }
 .track-header-slot {
     padding: 10px 15px 10px;
@@ -164,7 +167,7 @@ $small-label-width: 80px;
     background: #ccc;
 }
 .slot-content {
-    padding: 20px 15px 30px;
+    padding: 20px 5px 30px;
     min-height: 120px;
     background: #fff;
     transform: translateY(0);
@@ -181,6 +184,11 @@ $small-label-width: 80px;
     }
     &:hover {
         transform: translateY(5px);
+    }
+    p {
+      font-size: 12px;
+      line-height: 16px;
+      margin-top: 10px;
     }
 }
 .slot-language {
